--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,6 @@ repos:
       - id: format
         name: format
         language: system
-        entry: dotnet format
+        entry: dotnet format src
         types: [c#]
         pass_filenames: false
