Prepare release scripts

--- a/extension.yaml
+++ b/extension.yaml
@@ -4,3 +4,10 @@ Version: 0.1.0
 Module: LudusaviPlaynite.dll
 Type: GenericPlugin
 Icon: icon.png
+Links:
+  - Name: Plugin homepage
+    Url: https://github.com/mtkennerly/ludusavi-playnite
+  - Name: Ludusavi homepage
+    Url: https://github.com/mtkennerly/ludusavi
+  - Name: Manifest homepage
+    Url: https://github.com/mtkennerly/ludusavi-manifest
