--- a/src/LudusaviPlaynite.csproj
+++ b/src/LudusaviPlaynite.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ByteSize" Version="2.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
