#1: Update for Playnite 8 and add context menu actions for individual games

--- a/extension.yaml
+++ b/extension.yaml
@@ -1,4 +1,5 @@
-﻿Name: Ludusavi
+﻿Id: mtkennerly.ludusavi
+Name: Ludusavi
 Author: Matthew T. Kennerly
 Version: 0.3.0
 Module: LudusaviPlaynite.dll
