Support for playnite 9

--- a/src/LudusaviPlaynite.csproj
+++ b/src/LudusaviPlaynite.csproj
@@ -12,7 +12,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsBase" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
-    <PackageReference Include="PlayniteSDK" Version="5.4.0" />
+    <PackageReference Include="PlayniteSDK" Version="6.0.0-preview3" />
   </ItemGroup>
 
   <ItemGroup>
