#34: Use Project Fluent for translation and integrate Crowdin

--- a/src/LudusaviPlaynite.csproj
+++ b/src/LudusaviPlaynite.csproj
@@ -27,4 +27,13 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="../lang/*.ftl" />
+  </ItemGroup>
+
+  <!-- TODO: remove when Linguini 0.3.0+ is released -->
+  <ItemGroup>
+    <ProjectReference Include="../vendor/Linguini/Linguini.Bundle/Linguini.Bundle.csproj" />
+  </ItemGroup>
+
 </Project>
