--- a/src/LudusaviPlaynite.csproj
+++ b/src/LudusaviPlaynite.csproj
@@ -13,6 +13,7 @@
     <Reference Include="WindowsBase" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
     <PackageReference Include="PlayniteSDK" Version="6.0.0" />
+    <PackageReference Include="Linguini.Bundle" Version="0.3.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,11 +30,6 @@
 
   <ItemGroup>
     <EmbeddedResource Include="../lang/*.ftl" />
-  </ItemGroup>
-
-  <!-- TODO: remove when Linguini 0.3.0+ is released -->
-  <ItemGroup>
-    <ProjectReference Include="../vendor/Linguini/Linguini.Bundle/Linguini.Bundle.csproj" />
   </ItemGroup>
 
 </Project>
