--- a/src/LudusaviPlaynite.csproj
+++ b/src/LudusaviPlaynite.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
     <PackageReference Include="PlayniteSDK" Version="6.0.0" />
     <PackageReference Include="Linguini.Bundle" Version="0.3.0" />
+    <PackageReference Include="IndexRange" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
