--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,17 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.8.1
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2022-07-11
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.8.1/ludusavi-playnite-v0.8.1.pext
+    Changelog:
+      - >-
+        Fixed: Handling of games whose name begins with a hyphen.
+        Previously, the plugin would not have been able to run Ludusavi for such games.
+      - >-
+        Fixed: Handling of games whose name contains quotation marks.
+        Previously, depending on the quote placement, the plugin may not have found
+        anything to back up for such games.
   - Version: 0.8.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2022-07-07
