--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,24 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.10.0
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2022-09-01
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.10.0/ludusavi-playnite-v0.10.0.pext
+    Changelog:
+      - >-
+        Added: Support for multiple backups per game. This requires Ludusavi 0.12.0 or newer.
+        You can open Ludusavi to configure how many backups to keep.
+        The feature will be disabled if an older version is detected.
+      - >-
+        Added: Support for automatic backups on an interval while playing a game.
+      - >-
+        Added: Translation for Italian.
+        (Thanks to contributors on the Crowdin project: https://crowdin.com/project/ludusavi-playnite)
+      - >-
+        Fixed: Disabled fallback restoration by Steam ID for Ludusavi versions older than
+        0.12.0 to avoid a defect in those versions.
+      - >-
+        Fixed: The plugin settings window now has a horizontal scroll bar when necessary.
   - Version: 0.9.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2022-08-13
