--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,15 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.10.1
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2022-09-11
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.10.1/ludusavi-playnite-v0.10.1.pext
+    Changelog:
+      - >-
+        Fixed: Some errors were logged at info level.
+      - >-
+        Added: Updated translations.
+        (Thanks to contributors on the Crowdin project: https://crowdin.com/project/ludusavi-playnite)
   - Version: 0.10.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2022-09-01
