--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,15 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.11.1
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2022-11-16
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.11.1/ludusavi-playnite-v0.11.1.pext
+    Changelog:
+      - >-
+        Fixed: Crash when trying to open a nonexistent folder from the settings window.
+      - >-
+        Changed: Updated translations.
+        (Thanks to contributors on the Crowdin project: https://crowdin.com/project/ludusavi-playnite)
   - Version: 0.11.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2022-10-29
