--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,15 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.13.1
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2023-08-10
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.13.1/ludusavi-playnite-v0.13.1.pext
+    Changelog:
+      - >-
+        Fixed: Possible crash when saving plugin settings.
+      - >-
+        Changed: Updated translations.
+        (Thanks to contributors on the [Crowdin project](https://crowdin.com/project/ludusavi-playnite))
   - Version: 0.13.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2023-06-22
