--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,22 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.18.0
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2025-11-10
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.18.0/ludusavi-playnite-v0.18.0.pext
+    Changelog:
+      - >-
+        Added: The context menu now indicates when a backup is locked.
+        ([Contributed by darklinkpower](https://github.com/mtkennerly/ludusavi-playnite/pull/96))
+      - >-
+        Added: The context menu now lets you open Ludusavi to add/edit a game's custom entry.
+        This requires Ludusavi v0.30.0 or newer.
+      - >-
+        Added: The context menu now lets you (un)lock a backup and edit its comment.
+        This requires Ludusavi v0.30.0 or newer.
+      - >-
+        Changed: Updated translations, including a new translation for Turkish.
+        (Thanks to contributors on the [Crowdin project](https://crowdin.com/project/ludusavi-playnite))
   - Version: 0.17.1
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2025-05-07
