--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,5 +1,17 @@
 AddonId: mtkennerly.ludusavi
 Packages:
+  - Version: 0.18.1
+    RequiredApiVersion: 6.0.0
+    ReleaseDate: 2025-11-25
+    PackageUrl: https://github.com/mtkennerly/ludusavi-playnite/releases/download/v0.18.1/ludusavi-playnite-v0.18.1.pext
+    Changelog:
+      - >-
+        After editing the plugin settings to change the backup folder,
+        backups from the previous folder were still listed for each game
+        until you restarted Playnite.
+      - >-
+        Because of an encoding issue, depending on your system's regional settings,
+        backups were not always listed for games whose titles contained extended characters.
   - Version: 0.18.0
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2025-11-10
